--- a/style.css
+++ b/style.css
@@ -22,8 +22,10 @@ a {
 .myself {
     max-width: 1000px;
     background-color: RGB(64, 64, 64);
-    height: 60vh;
-    width: 60vw;
+    min-height: 60vh;
+    height: auto;
+    min-width: 60vw;
+    width: auto;
     align-items: center;
     margin: auto;
     margin-top: 10vh;
