--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
     background-color: RGB(17, 17, 17);
     font-family: 'Lora', serif;
-    overflow: hidden;
+    overflow-wrap: break-word;
+    margin: 0;
 }
 
 a {
     color: inherit;
     text-decoration: none;
 }
-
 
 .name:hover {
     color: #000000;
@@ -24,11 +24,13 @@ a {
     background-color: RGB(64, 64, 64);
     min-height: 60vh;
     height: auto;
+    max-height: 100vh;
     min-width: 60vw;
     width: auto;
     align-items: center;
     margin: auto;
     margin-top: 10vh;
+    margin-bottom: 10vh;
     border-radius: 20px;
     padding: 10px;
     color: white;
@@ -36,6 +38,7 @@ a {
     box-shadow: white 0px 0px 15px 0px;
     display: flex;
     flex-wrap: wrap;
+    overflow-y: auto;
     box-sizing: border-box;
 }
 
@@ -69,7 +72,6 @@ a {
 .about {
     width: 60%;
     height: 100%;
-    /* border: rgb(255, 0, 0) 2px solid; */
     float: right;
     padding: 10px;
     display: flexbox;
@@ -80,8 +82,9 @@ a {
     .myself {
         flex-direction: column;
         align-items: center;
+        overflow-y: visible;
+        max-height: none;
     }
-
     .myimage,
     .about {
         width: 100%;
@@ -100,15 +103,17 @@ a {
     width: 5vw;
     box-sizing: border-box;
     display: grid;
-    /* border: 2px solid red; */
     flex: 1;
     align-items: center;
     justify-content: center;
 }
 
-.link:hover{
+.icons:hover{
     background: linear-gradient(to right, rgb(9, 255, 30), rgb(203, 255, 15));
-    border-radius: 15px;
-    padding: 5px;
     transition: 0.2s ease-in-out;
+    border-radius: 22%;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 2px;
 }
