--- a/style.css
+++ b/style.css
@@ -9,14 +9,15 @@ a {
     color: inherit;
     text-decoration: none;
 }
-
+.click:hover{
+    color: rgb(255, 128, 9);
+}
 .name:hover {
     color: #000000;
     background: linear-gradient(to right, rgb(9, 255, 30), rgb(203, 255, 15));
     border-radius: 7px;
     padding: 3px;
     transition: 0.1s ease-in-out;
-
 }
 
 .myself {
@@ -84,6 +85,8 @@ a {
         align-items: center;
         overflow-y: visible;
         max-height: none;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     .myimage,
     .about {
@@ -110,7 +113,7 @@ a {
 
 .icons:hover{
     background: linear-gradient(to right, rgb(9, 255, 30), rgb(203, 255, 15));
-    transition: 0.2s ease-in-out;
+    transition: 0.08s ease-in-out;
     border-radius: 22%;
     padding-top: 5px;
     padding-right: 5px;
